# Cricinfo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
cricinfo/: __init__.py  cricbuzz.py
docs/: api.md  openai-oss-application.md  releasing.md
examples/: list_matches.py  match_details.py
tests/: conftest.py  fakes.py  test_cricbuzz.py
