[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricinfo"
version = "1.3.0"
description = "A Python interface for live cricket scores, commentary, and scorecards from Cricbuzz."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
authors = [
  { name = "Pranith Pashikanti", email = "pashikantipranith7867@gmail.com" }
]
keywords = ["cricket", "cricbuzz", "scorecard", "commentary", "live-score"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/pranith7/Cricinfo"
Repository = "https://github.com/pranith7/Cricinfo"
Issues = "https://github.com/pranith7/Cricinfo/issues"

[tool.setuptools]
packages = ["cricinfo"]
include-package-data = true

[tool.setuptools.package-data]
cricinfo = ["py.typed"]
