[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricinfo"
version = "1.3.0"
description = "A Python interface for live cricket scores, commentary, and scorecards from Cricbuzz."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
authors = [
  { name = "Pranith Pashikanti", email = "pashikantipranith7867@gmail.com" }
]
keywords = ["cricket", "cricbuzz", "scorecard", "commentary", "live-score"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7,<2",
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pip-audit>=2.7,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5.0,<7",
  "ruff>=0.6,<1",
  "types-requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/pranith7/Cricinfo"
Repository = "https://github.com/pranith7/Cricinfo"
Issues = "https://github.com/pranith7/Cricinfo/issues"

[tool.setuptools]
packages = ["cricinfo"]
include-package-data = true

[tool.setuptools.package-data]
cricinfo = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=cricinfo --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cricinfo"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "UP", "W"]
ignore = ["UP006", "UP035"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
